examples/test/testpolicy16034.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16034
  namespace: namespace145
spec:
  podSelector:
    matchLabels:
      key34: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value27
          key35: value27
          key37: value22
      podSelector:
        matchLabels:
          key14: value49
          key25: value12
          key3: value47
